--- a/CPRO2211-Assign3/CPRO2211-Assign3/appsettings.json
+++ b/CPRO2211-Assign3/CPRO2211-Assign3/appsettings.json
@@ -5,8 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Console": {
+    "LogLevel": {
+      "Default": "Information"
+    }
+  },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Contacts;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=Trips;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
